SSCSCI-2659 Address review comments - cleanup